--- a/package.json
+++ b/package.json
@@ -3,28 +3,26 @@
   "type": "module",
   "version": "1.0.0",
   "private": "true",
-  "packageManager": "pnpm@8.10.0",
+  "packageManager": "pnpm@10.7.0",
   "author": "asasinmode",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint . --fix",
     "dev": "vitepress dev",
     "build": "vitepress build",
     "preview": "vitepress preview"
   },
   "dependencies": {
-    "@unocss/reset": "^0.57.1",
-    "typescript": "^5.2.2",
-    "unocss": "^0.57.1",
-    "vitepress": "1.0.0-rc.15",
-    "vue": "^3.3.4"
+    "@unocss/reset": "^66.1.2",
+    "typescript": "^5.8.3",
+    "unocss": "^66.1.2",
+    "vitepress": "1.6.3",
+    "vue": "^3.5.14"
   },
   "devDependencies": {
-    "@asasinmode/eslint-config": "^0.4.7",
-    "@types/node": "^20.6.3",
-    "eslint": "^8.49.0"
-  },
-  "eslintConfig": {
-    "extends": "@asasinmode",
-    "root": true
+    "@antfu/eslint-config": "^4.13.0",
+    "@types/node": "^22.15.18",
+    "eslint": "^9.26.0",
+    "eslint-plugin-format": "^1.0.1"
   }
 }
